    macros expanding into a DECLARE expression. This is not a language change,
    since ANSI forbids such usage (X3J13 issue DECLARE-MACROS:FLUSH).
  * enhancement: for several macros such as MULTIPLE-VALUE-{BIND,SETQ}, COND,
    DO{,*,LIST}, {RESTART,HANDLER}-{BIND,CASE}, *CASE, conditions signaled
    during macroexpansion point to the form that caused the problem more
    accurately.

changes in sbcl-1.3.13 relative to sbcl-1.3.12:
  * enhancement: SET triggers package locks on undefined variables.
    (lp#1645152)
  * enhancement: new Windows specific option to run-program, :escape-arguments
    (lp#1503496)
  * enhancement: recompiling a MAKE-INSTANCE form with an initarg :INITARG
    CONSTANT where CONSTANT names a constant variable picks up the new value
    of CONSTANT in case it has been redefined. (lp#1644944)
  * optimization: faster TYPEP on undefined at compile-time types and upcoming
    class definitions. (lp#1082967)
  * optimization: memory consumption of each STANDARD-OBJECT instance is
    reduced by 2 words if the compact-instance-header feature is enabled.
  * optimization: CONDITION instances are quicker to allocate.
  * optimization: unoptimized calls to FILL on specialized vectors are now
    just as fast as T vectors.
  * bug fix: get-timezone returns corret DST on 64-bit Windows. (lp#1641058)
  * bug fix: cross reference information in fasls is no longer incompatible
    between different cores (lp#1648186)

changes in sbcl-1.3.12 relative to sbcl-1.3.11:
  * enhancement: on x86-64, compiled functions loaded from fasl files
    can not be moved, but can be freed, by GC. Additionally, COMPILE will
    produce immobile code if SB-C::*COMPILE-TO-MEMORY-SPACE* is set to
    :IMMOBILE. (Caution: the flag is experimental and subject to change.)
    The benefits are better physical separation of code from data,
    and potentially easier examination of live images by external tools.