@@ -8,6 +8,8 @@ changes in sbcl-1.3.14
     DO{,*,LIST}, {RESTART,HANDLER}-{BIND,CASE}, *CASE, conditions signaled
     during macroexpansion point to the form that caused the problem more
     accurately.
+  * enhancement: the "--noinform" command-line option inhibits output from
+    save-lisp-and-die in addition to removing the startup banner.
 
 changes in sbcl-1.3.13 relative to sbcl-1.3.12:
   * enhancement: SET triggers package locks on undefined variables.
